Parallelized source and coadd clsutering
Former-commit-id: ac46de73a68f3b13331d108641067ba50bdec570

--- a/vasca/examples/inspect_artifacts.ipynb
+++ b/vasca/examples/inspect_artifacts.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "region_name = \"WD\" #\"TDS\"  #_ELAISN1\n",
+    "region_name = \"TDS_ELAISN1\" #\"WD\" #\n",
     "\n",
     "# Add artifacts here\n",
     "dd_arts = [{\"field_id\":\"GNU2597312684324028416\", \"ra\":243.31, \"dec\":55.79, \"rad\":0.01},   # 0 Detection structures next to bright source\n",
@@ -42,26 +42,26 @@
     "           {\"field_id\":\"GNU2597734896789094400\", \"ra\":241.12, \"dec\":54.42, \"rad\":0.03},   # 13 Ring\n",
     "           {\"field_id\":\"GFU2597523790556561408\", \"ra\":241.405, \"dec\":55.615, \"rad\":0.03},  # 14 Ring without bright source, also NuV, Galaxy MCG+09-26-052\n",
     "           # From here on TDS non TDS_ELAI artifacts\n",
-    "           {\"field_id\":\"GNU2592738715952480256\", \"ra\":34.92, \"dec\":-4.35, \"rad\":0.08},     # 15 Large circle of circles with multiple detections on it\n",
-    "           {\"field_id\":\"GNU2598086740509982720\", \"ra\":333.98, \"dec\":0.03, \"rad\":0.08},     # 16 Large circle of circles with multiple detections on it\n",
-    "           {\"field_id\":\"GNU2607375414741434368\", \"ra\":213.82, \"dec\":52.54, \"rad\":0.08},    # 17 Large circle of circles with multiple detections on it\n",
-    "           {\"field_id\":\"GNU2607375414741434368\", \"ra\":213.752, \"dec\":52.58, \"rad\":0.005},  # 18  Zoom into above where source is\n",
-    "           {\"field_id\":\"GFU2592597978464124928\", \"ra\":35.87, \"dec\":-3.37, \"rad\":0.03},     # 19 FUV multiple rings in one another\n",
+    "           # {\"field_id\":\"GNU2592738715952480256\", \"ra\":34.92, \"dec\":-4.35, \"rad\":0.08},     # 15 Large circle of circles with multiple detections on it\n",
+    "           # {\"field_id\":\"GNU2598086740509982720\", \"ra\":333.98, \"dec\":0.03, \"rad\":0.08},     # 16 Large circle of circles with multiple detections on it\n",
+    "           # {\"field_id\":\"GNU2607375414741434368\", \"ra\":213.82, \"dec\":52.54, \"rad\":0.08},    # 17 Large circle of circles with multiple detections on it\n",
+    "           # {\"field_id\":\"GNU2607375414741434368\", \"ra\":213.752, \"dec\":52.58, \"rad\":0.005},  # 18  Zoom into above where source is\n",
+    "           # {\"field_id\":\"GFU2592597978464124928\", \"ra\":35.87, \"dec\":-3.37, \"rad\":0.03},     # 19 FUV multiple rings in one another\n",
     "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
     "        ]\n",
     "\n",
-    "dd_arts = [{\"field_id\":\"GNU2534578948688314368\", \"ra\":215.32584399689677, \"dec\":52.59654535152096, \"rad\":0.002}] #20 WD association with very nearby source \t\n",
+    "#dd_arts = [{\"field_id\":\"GNU2534578948688314368\", \"ra\":215.32584399689677, \"dec\":52.59654535152096, \"rad\":0.002}] #20 WD association with very nearby source \t\n",
     "\n",
     "# Variables to select detections and plotting options\n",
     "import numpy as np\n",
     "\n",
     "#Select artifacts that lead to detection removal. New column with \"art_sel\" will be created for detections to cut on. \n",
     "#This variable is zero if none of the artifacts below is selected, othervise the \"artifact value\"\n",
-    "art_bit_sel = [2,4] # [2,4,8,128] ,8,16,32,64,128,256,512\n",
-    "s2n_min    = 4                                                       # Minimum s2n of detections\n",
+    "art_bit_sel = [2,4,8,128,256] # [2,4,8,128] ,8,16,32,64,128,256,512\n",
+    "s2n_min    = 3                                                       # Minimum s2n of detections\n",
     "r_fov_max  = 0.5                                                     #Maximum distance from the camera center\n",
     "vars       = [\"ellip_world\",\"size_world\",\"class_star\",\"art_sel\"  , \"flux_app_ratio\"]     # Variables to be used to select detections on artifacts\n",
-    "vars_sel   = [[0.4,1.0]    ,[6,np.inf] ,[-0.5,0.15] ,[0.5,np.inf], [-np.inf,0.3]]   # Selection of detections on artifacts\n",
+    "vars_sel   = [[0.5,1.0]    ,[6,np.inf] ,[-0.5,0.15] ,[0.5,np.inf], [-np.inf,0.3]]   # Selection of detections on artifacts\n",
     "vars_col   = [\"blue\"       ,\"magenta\"  ,\"green\"     ,\"white\"     , \"yellow\"]           # Circle color for selected detections on artifacts\n",
     "vars_ms    = [8            ,6.5         , 5          ,3.5        , \"1.5\"]           # Marker size of circles showing detections selected by these artifacts. \n",
     "vars_bins  = [40           ,\"sqrt\"      , 40         ,\"sqrt\"     , 40]        # Nr bins for histogram plots\n",
@@ -98,12 +98,53 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: '\"h:m:s\"' did not parse as fits unit: Invalid character at col 0 If this is meant to be a custom unit, define it with 'u.def_unit'. To have it recognized inside a file reader or other code, enable it with 'u.add_enabled_units'. For details, see https://docs.astropy.org/en/latest/units/combining_and_defining.html [astropy.units.core]\n",
-      "WARNING: UnitsWarning: '\"d:m:s\"' did not parse as fits unit: Invalid character at col 0 If this is meant to be a custom unit, define it with 'u.def_unit'. To have it recognized inside a file reader or other code, enable it with 'u.add_enabled_units'. For details, see https://docs.astropy.org/en/latest/units/combining_and_defining.html [astropy.units.core]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div><i>Table length=14</i>\n",
+       "<table id=\"table140582797616960\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>field_id</th><th>field_name</th><th>project</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>fov_diam</th><th>sel</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th></tr></thead>\n",
+       "<thead><tr><th></th><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th>s</th><th>d</th><th>d</th><th></th></tr></thead>\n",
+       "<thead><tr><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes8</th><th>float32</th><th>bool</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int64</th></tr></thead>\n",
+       "<tr><td>GNU2597312684324028416</td><td>PS_ELAISN1_MOS10</td><td>DIS</td><td>242.50638203682297</td><td>55.9801443588634</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>24</td><td>29566.4</td><td>54960.17787037037</td><td>56821.33210648148</td><td>1</td></tr>\n",
+       "<tr><td>GNU2597383053068206080</td><td>PS_ELAISN1_MOS11</td><td>DIS</td><td>244.57200462478102</td><td>55.1825511621234</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>25</td><td>31369.5</td><td>54960.24638888889</td><td>56815.50054271557</td><td>2</td></tr>\n",
+       "<tr><td>GNU2597453421812383744</td><td>PS_ELAISN1_MOS12</td><td>DIS</td><td>242.896209389035</td><td>55.0003489374844</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>21</td><td>26349.451</td><td>54960.314884259256</td><td>56814.569061234084</td><td>3</td></tr>\n",
+       "<tr><td>GNU2597523790556561408</td><td>PS_ELAISN1_MOS13</td><td>DIS</td><td>241.28881797574297</td><td>55.3529870930308</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>22</td><td>27810.902</td><td>54960.38337962963</td><td>56819.53759259259</td><td>4</td></tr>\n",
+       "<tr><td>GNU2597594159300739072</td><td>PS_ELAISN1_MOS14</td><td>DIS</td><td>243.95513153083402</td><td>54.1978605194106</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>22</td><td>26881.852</td><td>54960.451886574076</td><td>56810.60611111111</td><td>5</td></tr>\n",
+       "<tr><td>GNU2597664528044916736</td><td>PS_ELAISN1_MOS15</td><td>DIS</td><td>242.396514585217</td><td>53.9999872930018</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>22</td><td>28044.65</td><td>54960.52040509259</td><td>56810.67461805556</td><td>6</td></tr>\n",
+       "<tr><td>GNU2597734896789094400</td><td>PS_ELAISN1_MOS16</td><td>DIS</td><td>241.37385712300306</td><td>54.4519391954855</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>21</td><td>26780.799</td><td>54960.588912037034</td><td>56807.7931854022</td><td>7</td></tr>\n",
+       "<tr><td>GFU2597312684324028416</td><td>PS_ELAISN1_MOS10</td><td>DIS</td><td>242.50638203682297</td><td>55.9801443588634</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6920.1</td><td>54960.17787037037</td><td>56504.46356481482</td><td>8</td></tr>\n",
+       "<tr><td>GFU2597383053068206080</td><td>PS_ELAISN1_MOS11</td><td>DIS</td><td>244.57200462478102</td><td>55.1825511621234</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6896.3994</td><td>54960.24638888889</td><td>56501.58207429109</td><td>9</td></tr>\n",
+       "<tr><td>GFU2597453421812383744</td><td>PS_ELAISN1_MOS12</td><td>DIS</td><td>242.896209389035</td><td>55.0003489374844</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6929.0996</td><td>54960.314884259256</td><td>56508.650511791086</td><td>10</td></tr>\n",
+       "<tr><td>GFU2597523790556561408</td><td>PS_ELAISN1_MOS13</td><td>DIS</td><td>241.28881797574297</td><td>55.3529870930308</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6942.2</td><td>54960.38337962963</td><td>56506.76889919705</td><td>11</td></tr>\n",
+       "<tr><td>GFU2597594159300739072</td><td>PS_ELAISN1_MOS14</td><td>DIS</td><td>243.95513153083402</td><td>54.1978605194106</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6951.2</td><td>54960.451886574076</td><td>56513.78742151331</td><td>12</td></tr>\n",
+       "<tr><td>GFU2597664528044916736</td><td>PS_ELAISN1_MOS15</td><td>DIS</td><td>242.396514585217</td><td>53.9999872930018</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6977.0</td><td>54960.52040509259</td><td>56519.80583333333</td><td>13</td></tr>\n",
+       "<tr><td>GFU2597734896789094400</td><td>PS_ELAISN1_MOS16</td><td>DIS</td><td>241.37385712300306</td><td>54.4519391954855</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6887.0</td><td>54960.588912037034</td><td>56510.974315863714</td><td>14</td></tr>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "<Table length=14>\n",
+       "       field_id           field_name    project ...     time_start         time_stop      rg_fd_id\n",
+       "                                                ...         d                  d                  \n",
+       "       bytes32             bytes32      bytes32 ...      float64            float64        int64  \n",
+       "---------------------- ---------------- ------- ... ------------------ ------------------ --------\n",
+       "GNU2597312684324028416 PS_ELAISN1_MOS10     DIS ...  54960.17787037037  56821.33210648148        1\n",
+       "GNU2597383053068206080 PS_ELAISN1_MOS11     DIS ...  54960.24638888889  56815.50054271557        2\n",
+       "GNU2597453421812383744 PS_ELAISN1_MOS12     DIS ... 54960.314884259256 56814.569061234084        3\n",
+       "GNU2597523790556561408 PS_ELAISN1_MOS13     DIS ...  54960.38337962963  56819.53759259259        4\n",
+       "GNU2597594159300739072 PS_ELAISN1_MOS14     DIS ... 54960.451886574076  56810.60611111111        5\n",
+       "GNU2597664528044916736 PS_ELAISN1_MOS15     DIS ...  54960.52040509259  56810.67461805556        6\n",
+       "GNU2597734896789094400 PS_ELAISN1_MOS16     DIS ... 54960.588912037034   56807.7931854022        7\n",
+       "GFU2597312684324028416 PS_ELAISN1_MOS10     DIS ...  54960.17787037037  56504.46356481482        8\n",
+       "GFU2597383053068206080 PS_ELAISN1_MOS11     DIS ...  54960.24638888889  56501.58207429109        9\n",
+       "GFU2597453421812383744 PS_ELAISN1_MOS12     DIS ... 54960.314884259256 56508.650511791086       10\n",
+       "GFU2597523790556561408 PS_ELAISN1_MOS13     DIS ...  54960.38337962963  56506.76889919705       11\n",
+       "GFU2597594159300739072 PS_ELAISN1_MOS14     DIS ... 54960.451886574076  56513.78742151331       12\n",
+       "GFU2597664528044916736 PS_ELAISN1_MOS15     DIS ...  54960.52040509259  56519.80583333333       13\n",
+       "GFU2597734896789094400 PS_ELAISN1_MOS16     DIS ... 54960.588912037034 56510.974315863714       14"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -129,6 +170,7 @@
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
     "rg = Region()\n",
     "rg.load_from_fits(region_fname)\n",
+    "#display(rg.tt_fields)\n",
     "\n",
     "#Put above cuts in a table for better displaying later\n",
     "tt_var_info = Table()\n",
@@ -155,10 +197,10 @@
      "data": {
       "text/html": [
        "<div><i>Table length=5</i>\n",
-       "<table id=\"table139974561920576\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140585425927136\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>variable</th><th>color</th><th>cut</th></tr></thead>\n",
        "<thead><tr><th>str14</th><th>str7</th><th>float64[2]</th></tr></thead>\n",
-       "<tr><td>ellip_world</td><td>blue</td><td>0.4 .. 1.0</td></tr>\n",
+       "<tr><td>ellip_world</td><td>blue</td><td>0.5 .. 1.0</td></tr>\n",
        "<tr><td>size_world</td><td>magenta</td><td>6.0 .. inf</td></tr>\n",
        "<tr><td>class_star</td><td>green</td><td>-0.5 .. 0.15</td></tr>\n",
        "<tr><td>art_sel</td><td>white</td><td>0.5 .. inf</td></tr>\n",
@@ -170,7 +212,7 @@
        "   variable     color      cut     \n",
        "    str14        str7   float64[2] \n",
        "-------------- ------- ------------\n",
-       "   ellip_world    blue   0.4 .. 1.0\n",
+       "   ellip_world    blue   0.5 .. 1.0\n",
        "    size_world magenta   6.0 .. inf\n",
        "    class_star   green -0.5 .. 0.15\n",
        "       art_sel   white   0.5 .. inf\n",
@@ -183,12 +225,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "934dc36c9087491696b6dfb90e4722dd",
+       "model_id": "670518065224466a98d64a6d9fac3018",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='art_idx', max=0), Output()), _dom_classes=('widget-inter…"
+       "interactive(children=(IntSlider(value=0, description='art_idx', max=14), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 3,
@@ -217,7 +259,7 @@
     "    sel_s2nfov = sel_s2n * sel_fov\n",
     "    fd.tt_detections[\"sel\"]  = sel_s2nfov\n",
     "    tt_det_all = fd.tt_detections[sel_s2nfov]\n",
-    "    display(tt_det_all)\n",
+    "    #display(tt_det_all)\n",
     "\n",
     "\n",
     "    # Apply bitmask cut\n",
