Fixed bug missing out writing coadd_sources
Former-commit-id: 21ef104587d7718fafb3fb5c518b0ccde0586fec

--- a/vasca/examples/convert_rg_src_ids.ipynb
+++ b/vasca/examples/convert_rg_src_ids.ipynb
@@ -20,13 +20,14 @@
     "region1_name = \"ALL_10-800\"  #\"ALL_10-800\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" # \"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
     "region1_fname = \"./vasca_pipeline/\"+region1_name+\"/region_\"+region1_name+\".fits\"\n",
     "\n",
-    "#Second region, usually the new one\n",
-    "region2_name = \"TDS_ELAISN1\" #\"ALL_10-800_LOOSE\"\n",
-    "region2_fname = \"./vasca_pipeline/\"+region2_name+\"/region_\"+region2_name+\".fits\"\n",
-    "\n",
     "#Source IDs to be converted\n",
     "srcs_ids1 =  [2996 ,11821 ,55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,124860 ,162490 ,182622 ,199884 ,226975 ,267514 ,588567 ,599887 ,789511 ,814134 ,] # WD and candidates, including GAIA info\n",
     "\n",
+    "#Second region, usually the new one\n",
+    "region2_name = \"ALL_10-800_LOOSE\"\n",
+    "region2_fname = \"./vasca_pipeline/\"+region2_name+\"/region_\"+region2_name+\".fits\"\n",
+    "\n",
+    "#Maximum distance to be considered the same source\n",
     "dist_max = 1*uu.arcsec"
    ]
   },
@@ -69,33 +70,34 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div><i>Table length=1</i>\n",
-       "<table id=\"table140642670994832\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>rg_src_id</th><th>rg_src_id1</th><th>dist_id1</th></tr></thead>\n",
-       "<thead><tr><th></th><th></th><th>arcsec</th></tr></thead>\n",
-       "<thead><tr><th>int32</th><th>int32</th><th>float64</th></tr></thead>\n",
-       "<tr><td>3610</td><td>92867</td><td>0.10998979825014282</td></tr>\n",
-       "</table></div>"
-      ],
-      "text/plain": [
-       "<Table length=1>\n",
-       "rg_src_id rg_src_id1       dist_id1     \n",
-       "                            arcsec      \n",
-       "  int32     int32          float64      \n",
-       "--------- ---------- -------------------\n",
-       "     3610      92867 0.10998979825014282"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "srcs_ids = [3610 ,]\n"
+      "rg_src_id rg_src_id1        dist_id1       \n",
+      "                             arcsec        \n",
+      "--------- ---------- ----------------------\n",
+      "     8215       2996  0.0006461470132057625\n",
+      "    32448      11821  5.868269211343778e-11\n",
+      "    67711      92867    0.21070969843371945\n",
+      "   151796      55034    0.03358798928417413\n",
+      "   166179      61491                    0.0\n",
+      "   172775      64360     0.0200684618342995\n",
+      "   193067      73354 1.4339030727067295e-10\n",
+      "   199832      76243   0.017188398987915875\n",
+      "   259271     104078   0.023469826296120298\n",
+      "   265150     106745   0.024960750174426984\n",
+      "   305192     124860   0.013248172871326059\n",
+      "   388172     162490     0.1233475292268099\n",
+      "   432606     182622    0.07792410812055205\n",
+      "   472623     199884  5.126678565123436e-11\n",
+      "   535864     226975    0.19300960416390975\n",
+      "   625693     267514  6.057443324924953e-10\n",
+      "  1521738     588567    0.11106603209001159\n",
+      "  1551422     599887                    0.0\n",
+      "  2136829     789511     0.2591118790872122\n",
+      "  2210890     814134     0.8595619562530208\n",
+      "srcs_ids = [8215 ,32448 ,67711 ,151796 ,166179 ,172775 ,193067 ,199832 ,259271 ,265150 ,305192 ,388172 ,432606 ,472623 ,535864 ,625693 ,1521738 ,1551422 ,2136829 ,2210890 ,]\n",
+      "20 counterparts found, for 20 sources\n"
      ]
     }
    ],
@@ -120,11 +122,13 @@
     "rg2.tt_sources[\"rg_src_id1\"]=rg_src_id1\n",
     "rg2.tt_sources[\"dist_id1\"]=d2d.to(uu.arcsec)\n",
     "sel = rg2.tt_sources[\"dist_id1\"] < dist_max\n",
-    "display(rg2.tt_sources[\"rg_src_id\",\"rg_src_id1\",\"dist_id1\"][sel])\n",
+    "#display(rg2.tt_sources[\"rg_src_id\",\"rg_src_id1\",\"dist_id1\"][sel])\n",
+    "rg2.tt_sources[\"rg_src_id\",\"rg_src_id1\",\"dist_id1\"][sel].pprint_all()\n",
     "print(\"srcs_ids = [\", end=\"\")\n",
     "for src_id in rg2.tt_sources[\"rg_src_id\"][sel].data:\n",
     "    print(src_id,\",\", end=\"\")\n",
-    "print(\"]\")"
+    "print(\"]\")\n",
+    "print(sel.sum(), \"counterparts found, for\", len(srcs_ids1), \"sources\" )"
    ]
   },
   {
