--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -25,14 +25,15 @@
    },
    "outputs": [],
    "source": [
-    "region_name = \"TDS_ELAISN1\" #\"ALL_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS_ELAISN1\"\n",
+    "region_name = \"ALL_10-800_LOOSE\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS_ELAISN1\"\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
     "show_skymaps = False\n",
     "load_src_from_file = True\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
     "#srcs_ids = [2996 ,11821 ,55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,124860 ,162490 ,182622 ,199884 ,226975 ,267514 ,588567 ,599887 ,789511 ,814134 ,] # WD and candidates, including GAIA info\n",
-    "srcs_ids = []"
+    "srcs_ids = []\n",
+    "srcs_ids = [8215 ,32448 ,54184 ,98746 ,151796 ,166179 ,172775 ,193067 ,199832 ,259271 ,265150 ,297278 ,305192 ,388172 ,432606 ,472623 ,535864 ,541266 ,625693 ,1521738 ,1551422 ,2136829 ,] # WD ALL_10-800-LOOSE"
    ]
   },
   {
@@ -45,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 248 selected: 248\n"
+      "Nr sources: 7988 selected: 7988\n"
      ]
     }
    ],
@@ -110,12 +111,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38b701f0c37549e28ea15ebf5fbed309",
+       "model_id": "abfc7b5c63bd4b9c9a33c77e1c4f13e8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(39, 128, 142, 148, 223, 245, 266, 334, 364, 4…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(8215, 32448, 54184, 98746, 151796, 166179, 17…"
       ]
      },
      "execution_count": 3,
@@ -177,12 +178,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d28f9a664f14f10a63686d65467861c",
+       "model_id": "95a6cd9fd7134f249474c86ea0ad3525",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=24, description='block_nr', max=49), Output()), _dom_classes=('widget-in…"
+       "interactive(children=(IntSlider(value=2, description='block_nr', max=4), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
