Updated periods and ogroups
Former-commit-id: a82aaccecbd8cda3eb74255ebde2aee55a21dc40

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -27,13 +27,17 @@
    "source": [
     "region_name = \"ALL_10-800_LOOSE\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS_ELAISN1\"\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
-    "show_skymaps = False\n",
-    "load_src_from_file = False\n",
+    "show_skymaps = True\n",
+    "load_src_from_file = True\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
     "#srcs_ids = [2996 ,11821 ,55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,124860 ,162490 ,182622 ,199884 ,226975 ,267514 ,588567 ,599887 ,789511 ,814134 ,] # WD and candidates, including GAIA info\n",
     "srcs_ids = []\n",
-    "srcs_ids = [8215 ,32448 ,54184 ,98746 ,151796 ,166179 ,172775 ,193067 ,199832 ,259271 ,265150 ,297278 ,305192 ,388172 ,432606 ,472623 ,535864 ,541266 ,625693 ,1521738 ,1551422 ,2136829 ,] # WD ALL_10-800-LOOSE"
+    "srcs_ids = [8215 ,32448 ,54184 ,98746 ,151796 ,166179 ,172775 ,193067 ,199832 ,259271 ,265150 ,297278 ,305192 ,388172 ,432606 ,472623 ,535864 ,541266 ,625693 ,1521738 ,1551422 ,2136829 ,] # WD ALL_10-800-LOOSE\n",
+    "srcs_ids = [4993 ,13580 ,14504 ,30475 ,50388 ,52994 ,79477 ,120265 ,138783 ,139480 ,162697 ,204419 ,221349 ,228958 ,236839 ,253214 ,\n",
+    "            253670 ,256433 ,261213 ,331466 ,340464 ,381336 ,390864 ,489430 ,498065 ,525310 ,532554 ,533185 ,540235 ,583838 ,639720 ,\n",
+    "            645215 ,645730 ,659787 ,666224 ,673175 ,680119 ,691408 ,714140 ,764827 ,1037284 ,1069077 ,1070938 ,1805505 ,1839206\n",
+    "            ,2527679 ,3074917 ,] # WD ALL_10-800-LOOSE"
    ]
   },
   {
@@ -46,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 7988 selected: 7988\n"
+      "Nr sources: 10413 selected: 10413\n"
      ]
     }
    ],
@@ -111,12 +115,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3e89d739ad54446b28a1bbafb8e8cc1",
+       "model_id": "defb8c621ddf4adf8abed052f64a22a8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(8215, 32448, 54184, 98746, 151796, 166179, 17…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(4993, 13580, 14504, 30475, 50388, 52994, 7947…"
       ]
      },
      "execution_count": 3,
@@ -155,7 +159,6 @@
     "        if table_name in tc_src._table_names:\n",
     "            print(\"\\n\",table_name,\":\")\n",
     "            display(tc_src.__dict__[table_name][col_names])\n",
-    "    tc_src.tt_gphoton_lc.pprint_all()\n",
     "    \n",
     "    #tc_src.tt_sed.pprint_all()\n",
     "\n",
@@ -179,12 +182,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68fd11ee6c6c481ab88e97200702ce2c",
+       "model_id": "23c1642793bc4bb28dd6752db96d3281",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=2, description='block_nr', max=4), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=4, description='block_nr', max=9), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
@@ -219,7 +222,22 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8420b92b598d49aaa693d03b95e9dffd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(4993, 13580, 14504, 30475, 50388, 529…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def plot_sky_src(rg_src_id=0, fd_idx=0, vis_idx = -1):\n",
     "    \n",
@@ -310,37 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": [
-    "def plot_sky_field(rg_fd_id):\n",
-    "    if rg_fd_id not in rg.tt_fields[\"rg_fd_id\"]:\n",
-    "        print(\"source ID does not exist\") \n",
-    "        return\n",
-    "    fig_skymap = plt.figure(\"Sky map\",figsize=(9, 8), clear=True) #, constrained_layout=True\n",
-    "    fd = rg.get_field(rg_fd_id=rg_fd_id, load_method=\"FITS\", add_field=True)\n",
-    "    ax, wcs = vvis.plot_field_sky_map(fd, img_idx=-1, sky_region = fd.get_sky_region(),fig=fig_skymap) # \n",
-    "    ax, tt_src_shown = vvis.plot_sky_sources(rg.tt_sources,tt_det=rg.tt_detections, sky_region_wcs = (fd.get_sky_region(),wcs),only_selected=only_sel_srcs) # \n",
-    "    plt.show()\n",
-    "    display(tt_src_shown) #[show_map_pars]\n",
-    "if show_skymaps:    \n",
-    "    widgets.interactive( plot_sky_field, rg_fd_id=(rg.tt_fields[\"rg_fd_id\"].min(),rg.tt_fields[\"rg_fd_id\"].max()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "40b02103-e651-4c98-bd2f-24461ed03f7e",
-   "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "34b800684d2d44e7966ecb4660737ea7",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "5.0"
+       "interactive(children=(Dropdown(description='rg_fd_id', options=(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14,…"
       ]
      },
      "execution_count": 7,
@@ -349,7 +351,18 @@
     }
    ],
    "source": [
-    "300/(60)"
+    "def plot_sky_field(rg_fd_id):\n",
+    "    if rg_fd_id not in rg.tt_fields[\"rg_fd_id\"]:\n",
+    "        print(\"source ID does not exist\") \n",
+    "        return\n",
+    "    fig_skymap = plt.figure(\"Sky map\",figsize=(9, 8), clear=True) #, constrained_layout=True\n",
+    "    fd = rg.get_field(rg_fd_id=rg_fd_id, load_method=\"FITS\", add_field=True)\n",
+    "    ax, wcs = vvis.plot_field_sky_map(fd, img_idx=-1, sky_region = fd.get_sky_region(),fig=fig_skymap) # \n",
+    "    ax, tt_src_shown = vvis.plot_sky_sources(rg.tt_sources,tt_det=rg.tt_detections, sky_region_wcs = (fd.get_sky_region(),wcs),only_selected=True) # \n",
+    "    plt.show()\n",
+    "    display(tt_src_shown) #[show_map_pars]\n",
+    "if show_skymaps: \n",
+    "    widgets.interactive(plot_sky_field, rg_fd_id=rg.tt_fields[\"rg_fd_id\"])"
    ]
   },
   {
