Added LS to region
Former-commit-id: e6a06107775c4865b06c0c79678a433e22c1573a

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -360,7 +360,7 @@
     "    ax, wcs = vvis.plot_field_sky_map(fd, img_idx=-1, sky_region = fd.get_sky_region(),fig=fig_skymap) # \n",
     "    ax, tt_src_shown = vvis.plot_sky_sources(rg.tt_sources,tt_det=rg.tt_detections, sky_region_wcs = (fd.get_sky_region(),wcs),only_selected=True) # \n",
     "    plt.show()\n",
-    "    display(tt_src_shown) #[show_map_pars]\n",
+    "    #display(tt_src_shown) #[show_map_pars]\n",
     "if show_skymaps: \n",
     "    widgets.interactive(plot_sky_field, rg_fd_id=rg.tt_fields[\"rg_fd_id\"])"
    ]
